Fix table rows overflowing when zoomed out
Fix by adding max-width to table container

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -791,6 +791,7 @@ input:-webkit-autofill:focus{
 
 .table-container{
     width:100%;
+    max-width: 1600px;
     height: fit-content;
     max-height: 80%;
     overflow:auto;
@@ -800,6 +801,7 @@ input:-webkit-autofill:focus{
 
 .logs-table{
     width: 100%;
+    // max-width: 1920px;
 }
 
 .logs-table tr:nth-child(even){
@@ -879,6 +881,7 @@ td:nth-child(4), th:nth-child(4){
 
 .admin-table{
     width: 100%;
+    // max-width: 1920px;
 
     td:nth-child(4), th:nth-child(4){
         flex: 2;
